# TushareDB

./: .env.example  .gitignore  API_REFERENCE_FOR_LLM.md  CLAUDE.md  MARKET_WIDTH_README.md  MIGRATION_GUIDE.md  PROJECT_MEMO.md  QUICK_START.md  README.md  README_FOR_AI.md  REPORT_MANAGER_GUIDE.md  SCHEMA_CONSISTENCY_REPORT.md  WORK_SUMMARY.md  analysis_ice_network.py  analyze_factor_performance.py  analyze_simulation_convergence.py  calendar_effects_analysis.py  check_chinese_font.py  check_schema.py  database_schema.json  demo_calculation.py  demo_complete_workflow.py  demo_full_comparison.py  demo_report_manager.py  demo_report_manager_simple.py  market_width.py  market_width_cli.py  market_width_example.py  market_width_quickstart.py  mcp_server.py  old_GEMINI.md  pyproject.toml  quick_view.sh  report_all_factors_20260306_180010.md  report_corrected_50K_20260306_200401.md  report_doji.md  report_large_scale_100K_20260306_180959.md  run_all_factors_validation.py  run_corrected_validation.py  run_large_scale_validation.py  (+27 more)
.gemini/: settings.json
backtest/: strategy.py
docs/: ARCHITECTURE_PROPOSAL.md  CONCEPT_MANAGER.md  CRITICAL_FIX_SUMMARY.md  MCP_SETUP.md  RANDOMNESS_VS_REALISM.md  SIMULATION_SCALE_ANALYSIS.md  STRATEGY_DATA_GUIDE.md  ULTIMATE_ARCHITECTURE_EXPLAINED.md  VALIDATION_SCALE_COMPARISON.md  sector_analysis_guide.md  稀疏数据与缓存健壮性分析.md  获取上市首日信息指南.md
examples/: backtest_money_signal.py  backtest_optimized.py  factor_validation_demo.py  optimize_params.py  period_end_money_flow_analysis.py  period_end_vs_daily_analysis.py  robust_money_flow_strategy.py  run_param_optimization.py  sector_analysis_demo.py  sector_analysis_excess_demo.py  sector_characteristics_analysis.py  sector_full_history_analysis.py  sector_full_history_l3_analysis.py  sector_lead_lag_comparison.py  sector_long_term_l1_analysis.py  sector_long_term_l3_analysis.py  sector_money_flow_strategy.py  strategy_money_plus_conduction.py  validate_strategy_robustness.py
frontend/: package.json  vite.config.ts
scripts/: alpha_analysis.py  amplitude_research.py  analyze_all_a_shares.py  analyze_factor_success_rate.py  backfill_cyq_perf.py  backfill_dc_moneyflow.py  backfill_financial_statements.py  backfill_index_member_pit.py  backfill_missing_data.py  bollinger_band_research.py  breakout_advanced_analysis.py  breakout_strategy_research.py  breakout_strategy_research_v2.py  calendar_effects_study.py  check_adj_data.py  check_data_integrity.py  check_moneyflow_stats.py  correlation_structure_analysis.py  correlation_study.py  dividend_research.py  dividend_yield_strategy.py  download_as_csv.py  drop_table.py  enhanced_validation.py  enhanced_validation_quick.py  example_listing_api.py  example_new_architecture.py  factor_effectiveness_analysis.py  init_data.py  (+64 more)
(+192 files in other folders)
