[project]
name = "tushare-db"
version = "0.1.0"
description = "A Python library for integrating Tushare data with DuckDB."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["tushare", "duckdb", "stock", "finance", "data"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "tushare>=1.4.2",
    "duckdb>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24",  # used by sector_analysis (analyzer/calculator)
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "orjson>=3.10.3", # Add orjson dependency
]

[project.optional-dependencies]
# MCP server（python -m tushare_db.mcp_server）所需。安装：pip install -e ".[mcp]"
mcp = ["mcp>=1.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
# Only collect the real test suite. `scripts/` contains runnable utility
# scripts (some named test_*.py) that execute side effects on import and
# break bare `pytest` collection.
testpaths = ["tests"]
